Add unit and interation tests
- Add unit test for PlayerSimulation using MockLocalTransformAdapter.
- Add integration tests and testing scenes for Player, Shootable and Shot.

--- a/Assets/Tests/EditorTests/EditorTestsAssembly.asmdef
+++ b/Assets/Tests/EditorTests/EditorTestsAssembly.asmdef
@@ -2,7 +2,8 @@
     "name": "EditorTests",
     "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEditor.TestRunner",
+        "CodeAssembly"
     ],
     "includePlatforms": [
         "Editor"
